# opengl-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.c  main.cpp
